tests/ui/feature-gates/feature-gate-associated-const-underscore.stderr
error[E0658]: naming associated constants with `_` is unstable
  --> $DIR/feature-gate-associated-const-underscore.rs:4:11
   |
LL |     const _: () = {};
   |           ^
   |
   = note: see issue #158944 <https://github.com/rust-lang/rust/issues/158944> for more information
   = help: add `#![feature(associated_const_underscore)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
