tests/ui/feature-gates/feature-gate-associated-const-underscore.rs
struct Thing {}

impl Thing {
    const _: () = {};
    //~^ ERROR: naming associated constants with `_` is unstable [E0658]
}

fn main() {
    let _ = Thing {};
}
